[tool.poetry]
name = "\"netlearn: network traffic analysis with neural networks\""
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.5.0"
pandas = "^2.2.1"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
dpkt = "^1.9.8"
scikit-learn = "^1.4.1.post1"
pycairo = "1.16.2"
tensorflow = "^2.16.1"
imgaug = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
